# minishot

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
3rd/clay/: CMakeLists.txt
3rd/stb/: CMakeLists.txt
app_bundle/: Info.plist  MiniShot.icns
src/app/: CMakeLists.txt  assets.h  main.c  overlay.c  overlay.h  render.c  render.h  settings.c  settings.h  theme.h  view.c  view.h
src/core/: CMakeLists.txt
src/core/appstate/: CMakeLists.txt  appstate.c  appstate.h
src/core/capture/: CMakeLists.txt  capture.c  capture.h
src/core/config/: CMakeLists.txt  config.c  config.h
src/core/geometry/: CMakeLists.txt  geometry.c  geometry.h
src/core/hotkey/: CMakeLists.txt  hotkey.c  hotkey.h
src/core/naming/: CMakeLists.txt  naming.c  naming.h
src/core/pinmodel/: CMakeLists.txt  pinmodel.c  pinmodel.h
src/core/toast/: CMakeLists.txt  toast.c  toast.h
src/core/toolbar/: CMakeLists.txt  toolbar.c  toolbar.h
src/core/util/: util.c  util.h
test/: CMakeLists.txt  test.h
test/src/appstate/: CMakeLists.txt  test_appstate.c
test/src/capture/: CMakeLists.txt  test_capture.c
test/src/config/: CMakeLists.txt  test_config.c
test/src/geometry/: CMakeLists.txt  test_geometry.c
test/src/hotkey/: CMakeLists.txt  test_hotkey.c
test/src/naming/: CMakeLists.txt  test_naming.c
test/src/pinmodel/: CMakeLists.txt  test_pinmodel.c
test/src/toast/: CMakeLists.txt  test_toast.c
test/src/toolbar/: CMakeLists.txt  test_toolbar.c
test/src/util/: CMakeLists.txt  test_util.c
